Update logo and favicon, enhance profile and homepage components. Changed ak-logo.svg to a smaller size with new gradient colors, added favicon.svg, and updated index.html and manifest.json accordingly. Introduced a resume download button in Homepage.js and improved avatar display in Profile.js with a new image. Enhanced button styles in App.css and added responsive design features.

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/ak-logo.svg" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="%PUBLIC_URL%/ak-logo.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ak-logo-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#ff6b35" />
+    <meta name="theme-color" content="#667eea" />
     <meta
       name="description"
-      content="AK Portfolio - Full Stack & Mobile App Developer"
+      content="AK Portfolio - Mobile App Developer"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ak-logo-192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
